# objectprogramming

./: cmds.py  irc.py  op.py  opsys.py  pyproject.toml  setup.py
bbin/: all  clean  env
bins/: lint
fin/: all  build  clean  lint  loop
min/: tinder
mod/: cmds.py  irc.py  tdo.py
notmod/: fnd.py  irc.py  log.py
op/: __init__.py  evt.py  handler.py  hdl.py  obj.py  object.py  run.py  running.py  thread.py  usersdb.py  usr.py  utils.py  ver.py  version.py
op/mod/: __init__.py  cfg.py  cmd.py  fnd.py  irc.py  sts.py
opm/: cmds.py  find.py  irc.py  mbx.py  rss.py  run.py
pbin/: all  build  clean  lint  wipe
test/: test_bus.py  test_dbs.py  test_evt.py  test_hdl.py  test_obj.py  test_op.py  test_thr.py  test_tmr.py  test_zcmd.py
